k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
  labels:
    app: hello-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
      - name: hello-container
        image: dbatruh/github-actions-example:build-24
        ports:
        - containerPort: 8050
        volumeMounts:
        - name: config-volume
          mountPath: /app/config.properties  
          subPath: config.properties         
      volumes:
      - name: config-volume
        configMap:
          name: hello-config
