k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  selector:
    app: hello-app
  ports:
  - protocol: TCP
    port: 8050
    targetPort: 8050
    nodePort: 30111
  type: LoadBalancer
